--- a/privacy.html
+++ b/privacy.html
@@ -8,21 +8,44 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #1a1a2e;
-      color: #e0e0e0;
+      background: #fff;
+      color: #1a1a1a;
       min-height: 100vh;
       line-height: 1.8;
     }
-    .container { max-width: 700px; margin: 0 auto; padding: 40px 20px; }
-    h1 { color: #fff; margin-bottom: 8px; }
-    .updated { color: #666; margin-bottom: 32px; }
-    h2 { color: #60a5fa; margin: 32px 0 16px; font-size: 1.2rem; }
-    p { margin-bottom: 16px; }
-    ul { margin: 16px 0 16px 24px; }
+    .container { max-width: 700px; margin: 0 auto; padding: 60px 24px; }
+    .back {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      color: #666;
+      text-decoration: none;
+      font-size: 0.9rem;
+      margin-bottom: 40px;
+    }
+    .back:hover { color: #1a1a1a; }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 8px;
+      letter-spacing: -0.02em;
+    }
+    .updated {
+      color: #999;
+      margin-bottom: 48px;
+      font-size: 0.9rem;
+    }
+    h2 {
+      font-size: 1.25rem;
+      margin: 40px 0 16px;
+      color: #1a1a1a;
+    }
+    p { margin-bottom: 16px; color: #444; }
+    ul {
+      margin: 16px 0 16px 24px;
+      color: #444;
+    }
     li { margin-bottom: 8px; }
-    a { color: #60a5fa; }
-    .back { display: inline-block; margin-bottom: 24px; color: #a0a0a0; text-decoration: none; }
-    .back:hover { color: #fff; }
+    a { color: #1a1a1a; }
   </style>
 </head>
 <body>
@@ -31,44 +54,44 @@
     <h1>Privacy Policy</h1>
     <p class="updated">Last updated: January 2025</p>
 
-    <h2>1. Introduction</h2>
-    <p>AI Art Uploader ("we", "our", "the app") is a personal content management tool for automated artwork publishing. This policy explains how we handle your data.</p>
+    <h2>Introduction</h2>
+    <p>AI Art Uploader is a personal content management tool for automated artwork publishing. Your privacy matters to us. This policy explains how we handle your data.</p>
 
-    <h2>2. Data We Collect</h2>
-    <p>When you use our app, we may collect:</p>
+    <h2>Data We Collect</h2>
+    <p>When you use our app, we may process:</p>
     <ul>
       <li>Social media account tokens (for posting on your behalf)</li>
       <li>Images you upload for publishing</li>
-      <li>Metadata generated for your content</li>
-      <li>Publishing history and analytics</li>
+      <li>AI-generated metadata for your content</li>
+      <li>Publishing history and basic analytics</li>
     </ul>
 
-    <h2>3. How We Use Your Data</h2>
+    <h2>How We Use Your Data</h2>
     <p>Your data is used solely to:</p>
     <ul>
       <li>Publish content to your connected social media accounts</li>
       <li>Generate AI-powered metadata for your images</li>
-      <li>Display analytics and publishing history</li>
+      <li>Display analytics and publishing history within the app</li>
     </ul>
 
-    <h2>4. Data Storage</h2>
+    <h2>Data Storage</h2>
     <p>All data is stored locally on your device. We do not transmit your personal data to external servers except when communicating with social media APIs (Pinterest, TikTok) and OpenAI for metadata generation.</p>
 
-    <h2>5. Third-Party Services</h2>
+    <h2>Third-Party Services</h2>
     <p>The app integrates with:</p>
     <ul>
-      <li>Pinterest API - for content publishing</li>
-      <li>TikTok API - for content publishing</li>
-      <li>OpenAI API - for metadata generation</li>
-      <li>Google Drive API - for image storage</li>
+      <li>Pinterest API — for content publishing</li>
+      <li>TikTok API — for content publishing</li>
+      <li>OpenAI API — for metadata generation</li>
+      <li>Google Drive API — for image storage</li>
     </ul>
     <p>Each service has its own privacy policy that governs their use of your data.</p>
 
-    <h2>6. Data Deletion</h2>
+    <h2>Data Deletion</h2>
     <p>You can delete all your data at any time by removing the app's local database files or revoking access tokens from your social media accounts.</p>
 
-    <h2>7. Contact</h2>
-    <p>For privacy questions, please open an issue on our GitHub repository.</p>
+    <h2>Contact</h2>
+    <p>For privacy questions, please open an issue on our <a href="https://github.com/vicomarcellus/ai-art-uploader-landing">GitHub repository</a>.</p>
   </div>
 </body>
 </html>
