--- a/terms.html
+++ b/terms.html
@@ -8,21 +8,44 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #1a1a2e;
-      color: #e0e0e0;
+      background: #fff;
+      color: #1a1a1a;
       min-height: 100vh;
       line-height: 1.8;
     }
-    .container { max-width: 700px; margin: 0 auto; padding: 40px 20px; }
-    h1 { color: #fff; margin-bottom: 8px; }
-    .updated { color: #666; margin-bottom: 32px; }
-    h2 { color: #60a5fa; margin: 32px 0 16px; font-size: 1.2rem; }
-    p { margin-bottom: 16px; }
-    ul { margin: 16px 0 16px 24px; }
+    .container { max-width: 700px; margin: 0 auto; padding: 60px 24px; }
+    .back {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      color: #666;
+      text-decoration: none;
+      font-size: 0.9rem;
+      margin-bottom: 40px;
+    }
+    .back:hover { color: #1a1a1a; }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 8px;
+      letter-spacing: -0.02em;
+    }
+    .updated {
+      color: #999;
+      margin-bottom: 48px;
+      font-size: 0.9rem;
+    }
+    h2 {
+      font-size: 1.25rem;
+      margin: 40px 0 16px;
+      color: #1a1a1a;
+    }
+    p { margin-bottom: 16px; color: #444; }
+    ul {
+      margin: 16px 0 16px 24px;
+      color: #444;
+    }
     li { margin-bottom: 8px; }
-    a { color: #60a5fa; }
-    .back { display: inline-block; margin-bottom: 24px; color: #a0a0a0; text-decoration: none; }
-    .back:hover { color: #fff; }
+    a { color: #1a1a1a; }
   </style>
 </head>
 <body>
@@ -31,28 +54,28 @@
     <h1>Terms of Service</h1>
     <p class="updated">Last updated: January 2025</p>
 
-    <h2>1. Acceptance of Terms</h2>
+    <h2>Acceptance of Terms</h2>
     <p>By using AI Art Uploader, you agree to these terms. If you do not agree, please do not use the app.</p>
 
-    <h2>2. Description of Service</h2>
+    <h2>Description of Service</h2>
     <p>AI Art Uploader is a personal tool that helps automate the process of publishing AI-generated artwork to social media platforms. The app generates metadata using AI and schedules posts on your behalf.</p>
 
-    <h2>3. User Responsibilities</h2>
+    <h2>User Responsibilities</h2>
     <p>You are responsible for:</p>
     <ul>
       <li>Ensuring you have rights to publish the content you upload</li>
-      <li>Complying with the terms of service of connected platforms (Pinterest, TikTok, etc.)</li>
+      <li>Complying with the terms of service of connected platforms</li>
       <li>Keeping your API credentials and tokens secure</li>
       <li>Any content published through the app</li>
     </ul>
 
-    <h2>4. Intellectual Property</h2>
+    <h2>Intellectual Property</h2>
     <p>You retain all rights to your content. The app does not claim ownership of any images or metadata you create.</p>
 
-    <h2>5. Third-Party Services</h2>
+    <h2>Third-Party Services</h2>
     <p>The app connects to third-party services (Pinterest, TikTok, OpenAI, Google). Your use of these services is subject to their respective terms of service.</p>
 
-    <h2>6. Disclaimer</h2>
+    <h2>Disclaimer</h2>
     <p>The app is provided "as is" without warranties of any kind. We are not responsible for:</p>
     <ul>
       <li>Content moderation decisions by social platforms</li>
@@ -61,14 +84,14 @@
       <li>AI-generated metadata accuracy</li>
     </ul>
 
-    <h2>7. Limitation of Liability</h2>
+    <h2>Limitation of Liability</h2>
     <p>To the maximum extent permitted by law, we shall not be liable for any indirect, incidental, or consequential damages arising from your use of the app.</p>
 
-    <h2>8. Changes to Terms</h2>
+    <h2>Changes to Terms</h2>
     <p>We may update these terms at any time. Continued use of the app constitutes acceptance of the updated terms.</p>
 
-    <h2>9. Contact</h2>
-    <p>For questions about these terms, please open an issue on our GitHub repository.</p>
+    <h2>Contact</h2>
+    <p>For questions about these terms, please open an issue on our <a href="https://github.com/vicomarcellus/ai-art-uploader-landing">GitHub repository</a>.</p>
   </div>
 </body>
 </html>
