Replace GitHub links with Get Started CTA buttons

--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
         <a href="#features">Features</a>
         <a href="#how-it-works">How it works</a>
         <a href="#platforms">Platforms</a>
-        <a href="https://github.com/vicomarcellus/ai-video-uploader-landing" class="nav-cta">Get Started</a>
+        <a href="#" class="nav-cta">Get Started</a>
       </nav>
       <button class="mobile-menu-btn" aria-label="Menu">
         <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -814,11 +814,11 @@
         <h1 class="animate-in delay-1">Publish your art<br><span>without the busywork</span></h1>
         <p class="animate-in delay-2">Automate your social media workflow with AI-powered metadata generation, smart scheduling, and multi-platform publishing — all in one powerful tool.</p>
         <div class="cta-buttons animate-in delay-3">
-          <a href="https://github.com/vicomarcellus/ai-video-uploader-landing" class="btn btn-primary">
-            <svg fill="currentColor" viewBox="0 0 24 24">
-              <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+          <a href="#" class="btn btn-primary">
+            <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/>
             </svg>
-            View on GitHub
+            Get Started
           </a>
           <a href="#features" class="btn btn-secondary">
             Learn more
@@ -1020,7 +1020,7 @@
       <div class="cta-content">
         <h2>Ready to automate your workflow?</h2>
         <p>Join creators who are saving hours every week with AI-powered publishing</p>
-        <a href="https://github.com/vicomarcellus/ai-video-uploader-landing" class="btn btn-primary">
+        <a href="#" class="btn btn-primary">
           Get Started Free
           <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" width="20" height="20">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
