Fix Pinterest icon and make platform cards equal size

--- a/index.html
+++ b/index.html
@@ -549,11 +549,14 @@
       flex-direction: column;
       align-items: center;
       gap: 16px;
-      padding: 32px 48px;
+      padding: 32px 24px;
       background: var(--white);
       border: 1px solid var(--gray-100);
       border-radius: 16px;
       transition: all 0.3s ease;
+      min-width: 160px;
+      flex: 1;
+      max-width: 200px;
     }
     
     .platform-card:hover {
@@ -977,8 +980,8 @@
       <div class="platforms-grid">
         <div class="platform-card">
           <div class="platform-icon pinterest">
-            <svg fill="currentColor" viewBox="0 0 24 24">
-              <path d="M12 0a12 12 0 00-4.373 23.178c-.07-.937-.134-2.377.028-3.401.146-.926.943-3.996.943-3.996s-.24-.482-.24-1.193c0-1.117.648-1.951 1.454-1.951.686 0 1.017.515 1.017 1.132 0 .69-.44 1.72-.666 2.676-.19.8.401 1.451 1.19 1.451 1.428 0 2.526-1.506 2.526-3.678 0-1.923-1.382-3.267-3.357-3.267-2.287 0-3.63 1.715-3.63 3.489 0 .69.266 1.431.598 1.834.066.08.075.15.056.231-.061.254-.197.8-.224.912-.035.148-.117.18-.27.108-1.008-.469-1.638-1.942-1.638-3.126 0-2.545 1.85-4.882 5.334-4.882 2.8 0 4.976 1.995 4.976 4.662 0 2.78-1.753 5.018-4.186 5.018-.817 0-1.586-.425-1.85-.927l-.503 1.917c-.182.702-.674 1.58-1.004 2.116A12 12 0 1012 0z"/>
+            <svg viewBox="0 0 24 24" fill="currentColor">
+              <path d="M12.017 0C5.396 0 .029 5.367.029 11.987c0 5.079 3.158 9.417 7.618 11.162-.105-.949-.199-2.403.041-3.439.219-.937 1.406-5.957 1.406-5.957s-.359-.72-.359-1.781c0-1.663.967-2.911 2.168-2.911 1.024 0 1.518.769 1.518 1.688 0 1.029-.653 2.567-.992 3.992-.285 1.193.6 2.165 1.775 2.165 2.128 0 3.768-2.245 3.768-5.487 0-2.861-2.063-4.869-5.008-4.869-3.41 0-5.409 2.562-5.409 5.199 0 1.033.394 2.143.889 2.741.099.12.112.225.085.345-.09.375-.293 1.199-.334 1.363-.053.225-.172.271-.401.165-1.495-.69-2.433-2.878-2.433-4.646 0-3.776 2.748-7.252 7.92-7.252 4.158 0 7.392 2.967 7.392 6.923 0 4.135-2.607 7.462-6.233 7.462-1.214 0-2.354-.629-2.758-1.379l-.749 2.848c-.269 1.045-1.004 2.352-1.498 3.146 1.123.345 2.306.535 3.55.535 6.607 0 11.985-5.365 11.985-11.987C23.97 5.39 18.592.026 11.985.026L12.017 0z"/>
             </svg>
           </div>
           <span>Pinterest</span>
